crates/apollo_storage/src/serialization/snapshots/apollo_storage__serialization__serializers_test__hints_regression_hint_583.snap
---
source: crates/apollo_storage/src/serialization/serializers_test.rs
expression: encoded_hint
---
- 0
- 0
- 0
- 0
- 0
- 0
- 2
- 71
- 1
- 14
- 0
- 0
- 2
- 2
- 130
- 182
- 143
- 0
- 1
- 250
- 255
- 0
- 0
- 0
